--- a/cdk/k8s-manifests/app/demo-aws-native.yaml
+++ b/cdk/k8s-manifests/app/demo-aws-native.yaml
@@ -2,27 +2,27 @@ apiVersion: apps/v1
 kind: Deployment
 metadata:
   labels:
-    service: demo-app-trace-loop
-  name: demo-app-trace-loop
+    service: demo-app
+  name: demo-app
   namespace: demo
 spec:
   replicas: 1
   selector:
     matchLabels:
-      service: demo-app-trace-loop
+      service: demo-app
   template:
     metadata:
       labels:
-        service: demo-app-trace-loop
+        service: demo-app
     spec:
       serviceAccountName: demo-service-account
       containers:
-        - name: demo-app-trace-loop
+        - name: demo-app
           image: ${ACCOUNT}.dkr.ecr.${AWS_REGION}.amazonaws.com/${STACK_NAME}-langchain-demo:${APP_VERSION}
           imagePullPolicy: Always
           ports:
             - containerPort: 8501
           env:
-            - name: TRACELOOP_API_KEY
-              value: tl_5a5947350e9c4f459ab330f063b31dfd
+            - name: OTLP_ENDPOINT
+              value: http://adot-collector-collector.observability:4318
       restartPolicy: Always
